--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gusto</title>
+<title>Om Ji Dry Fruits Wale</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -36,23 +36,24 @@
 <!-- Navigation
     ==========================================-->
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
-  <div class="container"> 
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
     </div>
-    
+
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#features" class="page-scroll">Specials</a></li>
-        <li><a href="#about" class="page-scroll">About</a></li>
-        <li><a href="#restaurant-menu" class="page-scroll">Menu</a></li>
-        <li><a href="#team" class="page-scroll">Chef</a></li>
-        <li><a href="#contact" class="page-scroll">Contact</a></li>
+        <!-- <li><a href="#about" class="page-scroll">About</a></li> -->
+        <!-- <li><a href="#restaurant-menu" class="page-scroll">Menu</a></li> -->
+        <li><a href="#gallery" class="page-scroll">Gallery</a></li>
+        <li><a href="#team" class="page-scroll">Owner</a></li>
+        <!-- <li><a href="#contact" class="page-scroll">Contact</a></li> -->
       </ul>
     </div>
-    <!-- /.navbar-collapse --> 
+    <!-- /.navbar-collapse -->
   </div>
 </nav>
 <!-- Header -->
@@ -62,8 +63,8 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1>Gusto</h1>
-            <p>Reservations: (887) 654-3210</p>
+            <h1>Om Ji Dry Fruits Wale</h1>
+            <p>Order : (+91) 9971-294-293</p>
           </div>
         </div>
       </div>
@@ -79,30 +80,30 @@
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <div class="features-item">
-          <h3>Lorem ipsum dolor</h3>
+          <h3>Akhrot</h3>
           <img src="img/specials/1.jpg" class="img-responsive" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sed commodo.</p>
+          <p>A walnut is the nut of any tree of the genus Juglans, particularly the Persian or English walnut, Juglans regia. Technically a walnut is the seed of a drupe or drupaceous nut and thus not a true botanical nut.</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="features-item">
-          <h3>Consectetur adipiscing</h3>
+          <h3>Badaam</h3>
           <img src="img/specials/2.jpg" class="img-responsive" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sed commodo.</p>
+          <p>The almond is a species of tree native to Mediterranean climate regions of the Middle East, but widely cultivated elsewhere. The almond is also the name of the edible and widely cultivated seed of this tree.</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="features-item">
-          <h3>Duis sed dapibus</h3>
+          <h3>Pista</h3>
           <img src="img/specials/3.jpg" class="img-responsive" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sed commodo.</p>
+          <p>The pistachio, a member of the cashew family, is a small tree originating from Central Asia and the Middle East. The tree produces seeds that are widely consumed as food.</p>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!-- About Section -->
-<div id="about">
+<!-- <div id="about">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-md-6 about-img"> </div>
@@ -117,9 +118,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Restaurant Menu Section -->
-<div id="restaurant-menu">
+<!-- <div id="restaurant-menu">
   <div class="container">
     <div class="section-title text-center">
       <h2>Menu</h2>
@@ -229,7 +230,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Gallery Section -->
 <div id="gallery">
   <div class="container-fluid">
@@ -256,10 +257,10 @@
       <div class="col-md-6">
         <div class="col-md-10 col-md-offset-1">
           <div class="section-title">
-            <h2>Meet Our Chef</h2>
+            <h2>Meet Our Owner</h2>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
+          <p>Om Ji, one of the biggest suppliers of Nuts & Dry fruits in India.</p>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p> -->
         </div>
       </div>
       <div class="col-md-6">
@@ -272,17 +273,17 @@
 <div id="contact" class="text-center">
   <div class="container text-center">
     <div class="col-md-4">
-      <h3>Reservations</h3>
+      <h3>Order</h3>
       <div class="contact-item">
-        <p>Please call</p>
-        <p>(887) 654-3210</p>
+        <p>Please Call</p>
+        <p>(+91) 9971-294-293</p>
       </div>
     </div>
     <div class="col-md-4">
       <h3>Address</h3>
       <div class="contact-item">
-        <p>4321 California St,</p>
-        <p>San Francisco, CA 12345</p>
+        <p>E42 East Uttam Nagar</p>
+        <p>New Delhi, DL 110059</p>
       </div>
     </div>
     <div class="col-md-4">
@@ -293,7 +294,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <!-- <div class="container">
     <div class="section-title text-center">
       <h3>Send us a message</h3>
     </div>
@@ -321,12 +322,12 @@
         <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
       </form>
     </div>
-  </div>
+  </div> -->
 </div>
 <div id="footer">
   <div class="container text-center">
     <div class="col-md-6">
-      <p>&copy; 2017 Gusto. All rights reserved. Design by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      <p>&copy; 2020 Om Ji Dry Fruits Wale. All rights reserved.</p>
     </div>
     <div class="col-md-6">
       <div class="social">
@@ -339,11 +340,11 @@
     </div>
   </div>
 </div>
-<script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
-<script type="text/javascript" src="js/bootstrap.js"></script> 
-<script type="text/javascript" src="js/SmoothScroll.js"></script> 
-<script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
-<script type="text/javascript" src="js/contact_me.js"></script> 
+<script type="text/javascript" src="js/jquery.1.11.1.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/SmoothScroll.js"></script>
+<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+<script type="text/javascript" src="js/contact_me.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
