--- a/index.html
+++ b/index.html
@@ -244,8 +244,11 @@
   </div>
 </div> -->
 <!-- Gallery Section -->
-<div id="gallery">
+<div id="gallery" class="text-center">
   <div class="container-fluid">
+    <div class="section-title">
+      <h2>Gallery</h2>
+    </div>
     <div class="row">
       <div class="col-xs-6 col-md-3">
         <div class="gallery-item"> <img src="img/gallery/01.jpg" class="img-responsive" alt=""></div>
