--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="team-img"><img src="img/chef.jpg" alt="..."></div>
+        <img class="img-responsive" src="img/chef.jpg" alt="Om Ji">
       </div>
     </div>
   </div>
