--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Om Ji Dry Fruits Wale</title>
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="Om Ji, one of the biggest suppliers of Nuts & Dry fruits in India, supplies directly to AIIMS, EIL, GAIL, Police Stations etc.">
+<meta name="author" content="Om Ji Dry Fruits Wale">
 
 <!-- Favicons
     ================================================== -->
@@ -93,21 +93,21 @@
       <div class="col-xs-12 col-sm-4">
         <div class="features-item">
           <h3>Akhrot</h3>
-          <img src="img/specials/1.jpg" class="img-responsive" alt="">
+          <img src="img/specials/1.jpg" class="img-responsive" alt="Akhrot">
           <p>A walnut is the nut of any tree of the genus Juglans, particularly the Persian or English walnut, Juglans regia. Technically a walnut is the seed of a drupe or drupaceous nut and thus not a true botanical nut.</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="features-item">
           <h3>Badaam</h3>
-          <img src="img/specials/2.jpg" class="img-responsive" alt="">
+          <img src="img/specials/2.jpg" class="img-responsive" alt="Badaam">
           <p>The almond is a species of tree native to Mediterranean climate regions of the Middle East, but widely cultivated elsewhere. The almond is also the name of the edible and widely cultivated seed of this tree.</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="features-item">
           <h3>Pista</h3>
-          <img src="img/specials/3.jpg" class="img-responsive" alt="">
+          <img src="img/specials/3.jpg" class="img-responsive" alt="Pista">
           <p>The pistachio, a member of the cashew family, is a small tree originating from Central Asia and the Middle East. The tree produces seeds that are widely consumed as food.</p>
         </div>
       </div>
@@ -251,16 +251,16 @@
     </div>
     <div class="row">
       <div class="col-xs-6 col-md-3">
-        <div class="gallery-item"> <img src="img/gallery/01.jpg" class="img-responsive" alt=""></div>
+        <div class="gallery-item"> <img src="img/gallery/01.jpg" class="img-responsive" alt="Anjeer"></div>
       </div>
       <div class="col-xs-6 col-md-3">
-        <div class="gallery-item"> <img src="img/gallery/02.jpg" class="img-responsive" alt=""></div>
+        <div class="gallery-item"> <img src="img/gallery/02.jpg" class="img-responsive" alt="Blueberry"></div>
       </div>
       <div class="col-xs-6 col-md-3">
-        <div class="gallery-item"> <img src="img/gallery/03.jpg" class="img-responsive" alt=""></div>
+        <div class="gallery-item"> <img src="img/gallery/03.jpg" class="img-responsive" alt="Flax Seeds"></div>
       </div>
       <div class="col-xs-6 col-md-3">
-        <div class="gallery-item"> <img src="img/gallery/04.jpg" class="img-responsive" alt=""></div>
+        <div class="gallery-item"> <img src="img/gallery/04.jpg" class="img-responsive" alt="Cranberry"></div>
       </div>
     </div>
   </div>
@@ -274,7 +274,7 @@
           <div class="section-title">
             <h2>Meet Our Owner</h2>
           </div>
-          <p>Om Ji, one of the biggest suppliers of Nuts & Dry fruits in India, supplies directly to AIIMS, EIL, GAIL etc.</p>
+          <p>Om Ji, one of the biggest suppliers of Nuts & Dry fruits in India, supplies directly to AIIMS, EIL, GAIL, Police Stations etc.</p>
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p> -->
         </div>
       </div>
@@ -297,7 +297,7 @@
     <div class="col-md-4">
       <h3>Address</h3>
       <div class="contact-item">
-        <p>E42 East Uttam Nagar</p>
+        <p>E-42 East Uttam Nagar,</p>
         <p>New Delhi, DL 110059</p>
       </div>
     </div>
@@ -305,7 +305,7 @@
       <h3>Opening Hours</h3>
       <div class="contact-item">
         <p>Mon-Thurs: 10:00 AM - 11:00 PM</p>
-        <p>Fri-Sun: 11:00 AM - 02:00 AM</p>
+        <p>Fri-Sun: 11:00 AM - 02:00 PM</p>
       </div>
     </div>
   </div>
