--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <div class="section-title">
             <h2>Meet Our Owner</h2>
           </div>
-          <p>Om Ji, one of the biggest suppliers of Nuts & Dry fruits in India, supplies directly to AIIMS, EIL, GAIL, Police Stations etc.</p>
+          <p>Om Ji, one of the biggest suppliers of Nuts & Dry fruits in India, supplies directly to employees of some of the biggest companies.</p>
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p> -->
         </div>
       </div>
@@ -297,8 +297,8 @@
     <div class="col-md-4">
       <h3>Address</h3>
       <div class="contact-item">
-        <p>E-42 East Uttam Nagar,</p>
-        <p>New Delhi, DL 110059</p>
+        <p>New Delhi,</p>
+        <p>India</p>
       </div>
     </div>
     <div class="col-md-4">
